Fix bug where theme is changed upon logout, fix dark mode for auth inputs

--- a/src/components/Auth/Input.module.scss
+++ b/src/components/Auth/Input.module.scss
@@ -31,6 +31,7 @@
     border-radius: 1rem;
     outline: none;
     border: 2px solid #e5e5e5;
+    background-color: rgba(var(--color-white-rgb), .5);
 
     transition: border-bottom 0.3s ease;
 
@@ -44,6 +45,7 @@
 
       &::placeholder {
         font-size: 1.6rem;
+        color: var(--color-black);
       }
   }
 
@@ -56,7 +58,7 @@
   position: absolute;
   z-index: 3;
   left: 1.2rem;
-  fill: var(--color-black-static);
+  fill: var(--color-black);
 
   &-pwrd {
     left: unset;
