--- a/src/components/UI/RecipeCard.module.scss
+++ b/src/components/UI/RecipeCard.module.scss
@@ -73,7 +73,7 @@
         border-radius: 50px;
         font-size: 0.8rem;
         font-weight: 500;
-        color: rgba($color-black, 0.8);
+        color: rgba(var(--color-black), 0.8);
         letter-spacing: 1px;
 
         text-align: center;
